Attempt fix of BG img display issue on mobile

--- a/style.css
+++ b/style.css
@@ -138,7 +138,10 @@ body {
 }
 
 body::after {
+    display: block;
     background: url(./images/free-squared-paper-vector.jpg);
+    background-size: cover;
+    background-repeat: repeat;
     opacity: 0.55;
     content: "";
     top: 0;
@@ -150,10 +153,10 @@ body::after {
 }
 
 main {
+    min-width: 360px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    min-width: 360px;
 }
 
 input:focus {
